packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/34_aces_1_3_1_dailies_pipeline.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>ACES 1.3.1 Dailies Pipeline</aces:description>
        <aces:author>
            <aces:name>DIT</aces:name>
            <aces:emailAddress>dit@production.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:ef344534-8b4f-4a9a-886e-68e411d6374e</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>On-Set Dailies with CDL and Show LUT - ACES 1.3.1</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:c8211404-e5ca-467f-97e9-24a27bb429d0</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>1</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="false">
            <aces:description>Sony Venice S-Log3/S-Gamut3 to ACES2065-1</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:IDT.Sony.Venice_SLog3_SGamut3.a1.v1</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="false">
            <aces:description>On-Set CDL Grade in ACEScct</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScct.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScct_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:ASC_SOP>
                <cdl:Slope>1.05 1.0 0.97</cdl:Slope>
                <cdl:Offset>0.01 0.0 -0.01</cdl:Offset>
                <cdl:Power>1.0 1.0 1.0</cdl:Power>
            </cdl:ASC_SOP>
            <cdl:ASC_SAT>
                <cdl:Saturation>1.05</cdl:Saturation>
            </cdl:ASC_SAT>
        </aces:lookTransform>
        <aces:lookTransform applied="false">
            <aces:description>Show LUT</aces:description>
            <aces:hash algorithm="http://www.w3.org/2001/04/xmldsig-more#md5">4GYskVNKvJ8K1ltFxVqpgw==</aces:hash>
            <aces:file>MasterLookBright_O-Rec709.clf</aces:file>
        </aces:lookTransform>
        <aces:outputTransform applied="false">
            <aces:description>RRT + Rec.709 ODT for Dailies</aces:description>
            <aces:referenceRenderingTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:RRT.a1.0.3</aces:transformId>
            </aces:referenceRenderingTransform>
            <aces:outputDeviceTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:ODT.Academy.Rec709_100nits_dim.a1.0.3</aces:transformId>
            </aces:outputDeviceTransform>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
