packages/aces-amf-lib/tests/Generated_Samples_AMF/invalid_AMFs/invalid_13_aces_1_3_with_2_0_transforms.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>Invalid: ACES 1.3 system with ACES 2.0 transforms</aces:description>
        <aces:author>
            <aces:name>Recipe System</aces:name>
            <aces:emailAddress>recipes@example.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:889ab971-6f13-49ef-9286-0d9b62841ac6</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>Version mismatch example</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:50Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:50Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:8d26741c-d372-4b24-af46-85ab76c8398d</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="true">
            <aces:description>ACES 2.0 transform in ACES 1.3 pipeline</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Input.ARRI.AlexaLF.LogC4-800.a1.v1</aces:transformId>
        </aces:inputTransform>
        <aces:outputTransform applied="true">
            <aces:description>ACES 2.0 output in ACES 1.3 system</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v2.0:Output.Rec709.100nits.a1.v1</aces:transformId>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
